# pyPropEdit

./: license.txt  pyproject.toml  readme.md
src/pyPropEdit_jhwilborn/: getFiles.py  get_files.py  handle_tracks.py  main.py  trackProcessor.py
